--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
 <body>
 
  <header>
-     <nav>
-      <a class="logo" href="./index.html">Web<span class="logo-1">Studio</span></a>  
-        
-        <ul> 
-             <li> <a href="./index.html">Студия</a> </li>
-             <li> <a href="./portfolio.html">Портфолио</a> </li>
-             <li> <a href="">Контакты</a> </li>
-         </ul>
-     </nav>
+    <nav>
+        <a class="logo" href="./index.html">Web<span class="logo-1">Studio</span></a>
 
-     <ul> 
-         <li>
-             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-         </li>
-         <li>
-             <a href="tel:+380961111111">+38 096 111 11 11</a>
-         </li>
-     </ul>
+        <ul class="nav">
+            <li> <a class="nav-link" href="./index.html">Студия</a> </li>
+            <li> <a class="nav-link" href="./portfolio.html">Портфолио</a> </li>
+            <li> <a class="nav-link" href="">Контакты</a> </li>
+        </ul>
+    </nav>
+
+    <ul>
+        <li>
+            <a class="head-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
+            <a class="head-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+    </ul>
  </header> 
  
  <main>
 
     <!-- Баннер -->
-     <section>
-         <h1>Эффективные решения для вашего бизнеса</h1>
-         <button type="button">Заказать услугу</button>
+     <section class="main">
+         <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+         <button class="main-title-btn" type="button">Заказать услугу</button>
      </section>
 
     <!-- Плюсы -->
@@ -63,7 +63,7 @@
                 <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
-    </section>]
+    </section>
 
     <!-- Что-то делаем, важное -->
     <section>
