--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,19 @@
         <nav>
             <a class="logo" href="./index.html">Web<span class="logo-1">Studio</span></a>
 
-            <ul>
-                <li> <a href="./index.html">Студия</a> </li>
-                <li> <a href="./portfolio.html">Портфолио</a> </li>
-                <li> <a href="">Контакты</a> </li>
+            <ul class="nav">
+                <li> <a class="nav-link" href="./index.html">Студия</a> </li>
+                <li> <a class="nav-link" href="./portfolio.html">Портфолио</a> </li>
+                <li> <a class="nav-link" href="">Контакты</a> </li>
             </ul>
         </nav>
 
         <ul>
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="head-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="head-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
