--- a/index.html
+++ b/index.html
@@ -38,36 +38,36 @@
 
     <!-- Баннер -->
      <section class="main">
-         <h1 class="main-title">Эффективные решения для вашего бизнеса</h1>
+         <h1 class="main-title">Эффективные решения <br> для вашего бизнеса</h1>
          <button class="main-title-btn" type="button">Заказать услугу</button>
      </section>
 
     <!-- Плюсы -->
     <section>
-        <h2>Чем мы лучше</h2>
+        <h2 class="title-2">Чем мы лучше</h2>
         <ul>
             <li>
-                <h3>Внимание к деталям</h3>
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <h3 class="title-3">Внимание к деталям</h3>
+                <p class="text-1">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
             <li>
-                <h3>Пунктуальность</h3>
-                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <h3 class="title-3">Пунктуальность</h3>
+                <p class="text-1">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
             <li>
-                <h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <h3 class="title-3">Планирование</h3>
+                <p class="text-1">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
             <li>
-                <h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <h3 class="title-3">Современные технологии</h3>
+                <p class="text-1">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
         </ul>
     </section>
 
     <!-- Что-то делаем, важное -->
     <section>
-        <h2>Что мы делаем</h2>
+        <h2 class="title-2">Чем мы занимаемся</h2>
         <ul>
             <li> 
                 <img src="./img/box_1.jpg" alt="Верстка" width="370"> 
@@ -82,28 +82,28 @@
     </section>
     
     <!-- Я и моя команда молодая -->
-    <section>
-        <h2>Наша команда</h2>
+    <section class="team">
+        <h2 class="title-2">Наша команда</h2>
         <ul>
             <li>
                 <img src="./img/ihor.jpg" alt="Игорь Демьяненко" width="270">
-                <h3>Игорь Демьяненко</h3>
-                <p lang="en">Product Designer</p>
+                <h3 class="name">Игорь Демьяненко</h3>
+                <p lang="en" class="prof">Product Designer</p>
             </li>
             <li>
                 <img src="./img/olga.jpg" alt="Ольга Репина" width="270">
-                <h3>Ольга Репина</h3>
-                <p lang="en">Frontend Developer</p>
+                <h3 class="name">Ольга Репина</h3>
+                <p lang="en" class="prof">Frontend Developer</p>
             </li>
             <li>
                 <img src="./img/nikolay.jpg" alt="Николай Тарасов" width="270">
-                <h3>Николай Тарасов</h3>
-                <p lang="en">Marketing</p>
+                <h3 class="name">Николай Тарасов</h3>
+                <p lang="en" class="prof">Marketing</p>
             </li>
             <li>
                 <img src="./img/mikhayl.jpg" alt="Михаил Ермаков" width="270">
-                <h3>Михаил Ермаков</h3>
-                <p lang="en">UI Designer</p>
+                <h3 class="name">Михаил Ермаков</h3>
+                <p lang="en" class="prof">UI Designer</p>
             </li>
         </ul>
     </section>
@@ -111,15 +111,15 @@
 
  <footer>
     <a class="logo" href="">Web<span class="logo-2">Studio</span></a>
-    <address>
+    <address class="foot-adr">
         г. Киев, пр-т Леси Украинки, 26
     </address>
     <ul>
         <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="foot-cont" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="foot-cont" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
      </ul>
   </footer>
