--- a/portfolio.html
+++ b/portfolio.html
@@ -42,19 +42,19 @@
         <!-- Фильтры -->
         <ul>
             <li>
-                <button type="button">Все</button>
+                <button class="filter-btn" type="button">Все</button>
             </li>
             <li>
-                <button type="button">Веб-сайты</button>
+                <button class="filter-btn" type="button">Веб-сайты</button>
             </li>
             <li>
-                <button type="button">Приложения</button>
+                <button class="filter-btn" type="button">Приложения</button>
             </li>
             <li>
-                <button type="button">Дизайн</button>
+                <button class="filter-btn" type="button">Дизайн</button>
             </li>
             <li>
-                <button type="button">Маркетинг</button>
+                <button class="filter-btn" type="button">Маркетинг</button>
             </li>
         </ul>
         
@@ -62,63 +62,63 @@
         <ul>
             <li>
                 <img src="./img/project-1.jpg" alt="Технокряк" width="370">
-                <h2>Технокряк</h2>
-                <p>Веб-сайт</p>
+                <h2 class="port-title">Технокряк</h2>
+                <p class="port-text">Веб-сайт</p>
             </li>
             <li>
                 <img src="./img/project-2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-                <h2>Постер New Orlean vs Golden Star</h2>
-                <p>Дизайн</p>
+                <h2 class="port-title">Постер New Orlean vs Golden Star</h2>
+                <p class="port-text">Дизайн</p>
             </li>
             <li>
                 <img src="./img/project-3.jpg" alt="Ресторан Seafood" width="370">
-                <h2>Ресторан Seafood</h2>
-                <p>Приложение</p>
+                <h2 class="port-title">Ресторан Seafood</h2>
+                <p class="port-text">Приложение</p>
             </li>
             <li>
                 <img src="./img/project-4.jpg" alt="Проект Prime" width="370">
-                <h2>Проект Prime</h2>
-                <p>Маркетинг</p>
+                <h2 class="port-title">Проект Prime</h2>
+                <p class="port-text">Маркетинг</p>
             </li>
             <li>
                 <img src="./img/project-5.jpg" alt="Проект Boxes" width="370">
-                <h2>Проект Boxes</h2>
-                <p>Приложение</p>
+                <h2 class="port-title">Проект Boxes</h2>
+                <p class="port-text">Приложение</p>
             </li>
             <li>
                 <img src="./img/project-6.jpg" alt="Inspiration has no Borders" width="370">
-                <h2>Inspiration has no Borders</h2>
-                <p>Веб-сайт</p>
+                <h2 class="port-title">Inspiration has no Borders</h2>
+                <p class="port-text">Веб-сайт</p>
             </li>
             <li>
                 <img src="./img/project-7.jpg" alt="Издание Limited Edition" width="370">
-                <h2>Издание Limited Edition</h2>
-                <p>Дизайн</p>
+                <h2 class="port-title">Издание Limited Edition</h2>
+                <p class="port-text">Дизайн</p>
             </li>
             <li>
                 <img src="./img/project-8.jpg" alt="Проект LAB" width="370">
-                <h2>Проект LAB</h2>
-                <p>Маркетинг</p>
+                <h2 class="port-title">Проект LAB</h2>
+                <p class="port-text">Маркетинг</p>
             </li>
             <li>
                 <img src="./img/project-9.jpg" alt="Growing Business" width="370">
-                <h2>Growing Business</h2>
-                <p>Приложение</p>
+                <h2 class="port-title">Growing Business</h2>
+                <p class="port-text">Приложение</p>
             </li>
         </ul>
     </main>
 
     <footer>
         <a class="logo" href="">Web<span class="logo-2">Studio</span></a>
-        <address>
+        <address class="foot-adr">
             г. Киев, пр-т Леси Украинки, 26
         </address>
         <ul>
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="foot-cont" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="foot-cont" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </footer>
